# bazel-toolchain-deps

./: BUILD.bazel  README.md  WORKSPACE  defs.bzl
common/: WORKSPACE
common/sh/: BUILD.bazel  defs.bzl  sh.tpl
target-on-toolchain/: BUILD.bazel  WORKSPACE
target-on-toolchain/cc/: BUILD.bazel  defs.bzl
target-on-toolchain/haskell/: BUILD.bazel  defs.bzl
toolchain-on-toolchain/: WORKSPACE
toolchain-on-toolchain/haskell/: defs.bzl
toolchain-on-toolchain/platform/: BUILD.bazel
