load("//:defs.bzl", "inner_toolchain", "outer_toolchain", "consumer")

constraint_setting(name = "color")
constraint_value(
    name = "execution",
    constraint_setting = ":color",
)
constraint_value(
    name = "target",
    constraint_setting = ":color",
)
platform(
    name = "execution_platform",
    constraint_values = [":execution"],
)
platform(
    name = "target_platform",
    constraint_values = [":target"],
)

toolchain_type(name = "inner_toolchain_type")
inner_toolchain(
    name = "inner_execution_execution",
    execution = "execution",
    target = "execution",
)
toolchain(
    name = "inner_execution_execution_toolchain",
    exec_compatible_with = [":execution"],
    target_compatible_with = [":execution"],
    toolchain = ":inner_execution_execution",
    toolchain_type = ":inner_toolchain_type",
)
inner_toolchain(
    name = "inner_execution_target",
    execution = "execution",
    target = "target",
)
toolchain(
    name = "inner_execution_target_toolchain",
    exec_compatible_with = [":execution"],
    target_compatible_with = [":target"],
    toolchain = ":inner_execution_target",
    toolchain_type = ":inner_toolchain_type",
)

toolchain_type(name = "outer_toolchain_type")
outer_toolchain(
    name = "outer_execution_target",
    execution = "execution",
    target = "target",
)
toolchain(
    name = "outer_execution_target_toolchain",
    exec_compatible_with = [":execution"],
    target_compatible_with = [":target"],
    toolchain = ":outer_execution_target",
    toolchain_type = ":outer_toolchain_type",
)

consumer(name = "consumer")
