load("defs.bzl", "haskell_compiler", "haskell_toolchain")

haskell_compiler(
    name = "haskell_linux_x86_64",
    exec_cpu = "x86_64",
    exec_os = "linux",
    target_cpu = "x86_64",
    target_os = "linux",
)

haskell_compiler(
    name = "haskell_linux_x86_64_cross_arm",
    exec_cpu = "x86_64",
    exec_os = "linux",
    target_cpu = "arm",
    target_os = "linux",
)

haskell_toolchain(
    name = "haskell_linux_x86_64_toolchain",
    compiler = ":haskell_linux_x86_64",
)

haskell_toolchain(
    name = "haskell_linux_x86_64_cross_arm_toolchain",
    compiler = ":haskell_linux_x86_64_cross_arm",
)

toolchain_type(name = "toolchain_type")

toolchain(
    name = "linux_x86_64",
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    target_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    toolchain = ":haskell_linux_x86_64_toolchain",
    toolchain_type = ":toolchain_type",
)

toolchain(
    name = "linux_x86_64_cross_arm",
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    target_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:arm",
    ],
    toolchain = ":haskell_linux_x86_64_cross_arm_toolchain",
    toolchain_type = ":toolchain_type",
)

